Change API type

--- a/counter-app/service/api/catalog-info.yaml
+++ b/counter-app/service/api/catalog-info.yaml
@@ -9,7 +9,7 @@ metadata:
   tags:
     - http
 spec:
-  type: openapi
+  type: thrift
   lifecycle: production
   owner: group:guests
   system: counter-app
