--- a/all-inventory.yaml
+++ b/all-inventory.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
-  name: all-counter
+  name: all-inventory
   description: A collection of all Backstage Inventory example entities, except users, groups, and templates
 spec:
   targets:
